refactor and add readBigDecimal() to UserInteraction